Updates styling of Select so it looks good on Safari. Adds custom arrow in Select. Fixes zoom-bug focusing in Input field on iPhone. Updates font-family of Button, Select and Input.

--- a/src/components/Input/styles.scss
+++ b/src/components/Input/styles.scss
@@ -3,11 +3,10 @@
   flex-direction: column;
 
   input {
+    font-size: 1rem;
     border: 1px solid #ccc;
     padding: 1rem;
-    font-family: 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
-      'Droid Sans', 'Helvetica Neue', sans-serif;
-
+    font-family: 'PT Serif', serif;
     &.input-error {
       border: 1px solid red;
     }
